Pull up following revision(s) (requested by msaitoh in ticket #247): 	sys/arch/x86/x86/procfs_machdep.c: revision 1.16   Check buffer length correctly to not to print a garbage character. Fixes PR#52352 reported by Yasushi Oshima.